--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="Lla-WF-U84">
             <objects>
-                <viewController id="zvx-ot-2OY" customClass="ViewController" customModule="random_dog_generator_test_2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="zvx-ot-2OY" customClass="ViewController" customModule="dog_images_generator_ui" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fgJ-A2-RzC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -69,7 +69,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Prev"/>
                                         <connections>
-                                            <action selector="didTapOnSubmit:" destination="zvx-ot-2OY" eventType="touchUpInside" id="RB0-F3-ZBY"/>
+                                            <action selector="didTapOnPrevious:" destination="zvx-ot-2OY" eventType="touchUpInside" id="j8I-Ba-C2M"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSy-rB-b6g">
@@ -80,7 +80,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Next"/>
                                         <connections>
-                                            <action selector="didTapOnSubmit:" destination="zvx-ot-2OY" eventType="touchUpInside" id="WqJ-zV-h5R"/>
+                                            <action selector="didTapOnNext:" destination="zvx-ot-2OY" eventType="touchUpInside" id="26d-UD-rr1"/>
                                         </connections>
                                     </button>
                                 </subviews>
